--- a/src/app/modules/comments/comment/comment.component.ng.scss
+++ b/src/app/modules/comments/comment/comment.component.ng.scss
@@ -4,12 +4,29 @@
   .m-comment {
     position: relative;
   }
+  .m-comment--compact {
+    padding: 5px 30px 20px;
+    .m-dropdown--v2 {
+      margin-right: 0;
+    }
+    .minds-avatar {
+      margin: 0 10px 0 0 !important;
+    }
+    .m-commentOwnerRow__text {
+      flex-direction: column;
+      align-items: flex-start;
+
+      .m-comment__timestamp::before {
+        display: none;
+      }
+    }
+    .minds-body {
+      max-width: 100%;
+    }
+  }
 
   .m-dropdown--v2 {
     margin-right: 10px;
-    @media screen and (max-width: $max-mobile) {
-      margin-right: 0;
-    }
   }
 
   .m-comment--focused {
@@ -32,18 +49,10 @@
     .m-commentOwnerRow__text {
       display: flex;
       align-items: center;
-
-      @media screen and (max-width: $max-mobile) {
-        flex-direction: column;
-        align-items: flex-start;
-
-        .m-comment__timestamp::before {
-          display: none;
-        }
-      }
     }
 
-    [class*='m-commentOwnerRow__'] {
+    .m-commentOwnerRow__owner,
+    .m-commentOwnerRow__metrics {
       display: flex;
       > a span,
       span {
@@ -168,7 +177,9 @@
 
     ::ng-deep {
       .m-commentToolbarButton {
-        margin-right: 22px;
+        margin-right: 30px;
+        text-rendering: optimizeLegibility;
+        -webkit-font-smoothing: antialiased;
         cursor: pointer;
 
         > a {
@@ -235,33 +246,26 @@
     }
   }
 
-  .m-comment .m-comment__avatar--largeScreens {
-    @media screen and (max-width: $max-mobile) {
-      display: none;
+  .m-comment {
+    [class*='.m-comment__avatar'] {
+      margin-left: 0;
     }
-  }
-  .m-comment .m-comment__avatar--smallScreens {
-    @media screen and (min-width: $max-mobile + 1) {
-      display: none;
-      .minds-avatar {
-        margin-left: 0;
+
+    .minds-avatar {
+      margin: 0 15px 0 0;
+      min-width: 38px;
+      min-height: 38px;
+
+      img {
+        width: 36px;
+        height: 36px;
+        object-fit: cover;
       }
     }
   }
 
-  .m-comment .minds-avatar {
-    margin-top: 2px;
-    margin-right: 15px;
-    min-width: 38px;
-
-    img {
-      width: 36px;
-      height: 36px;
-      object-fit: cover;
-    }
-  }
-
   .m-comment__menuButton i {
+    font-size: 23px;
     cursor: pointer;
     transition: all 0.2s cubic-bezier(0.23, 1, 0.32, 1);
     @include m-theme() {
