--- a/src/app/modules/comments/poster/poster.component.html
+++ b/src/app/modules/comments/poster/poster.component.html
@@ -1,5 +1,5 @@
 <div class="m-comment m-commentPoster" *ngIf="!readonly && isLoggedIn">
-  <div class="minds-body">
+  <div>
     <div class="m-comments-composer m-commentPoster__wrapper">
       <div class="m-commentPoster__avatar">
         <a [routerLink]="['/', session.getLoggedInUser().username]">
@@ -133,29 +133,6 @@
         </div>
         <!-- --------------------- -->
       </div>
-      <!-- --------------------- -->
-      <!-- -Login notice ------- -->
-      <!-- --------------------- -->
-
-      <div
-        class="m-comments--start-conversation-label"
-        *ngIf="!isLoggedIn && level < 1"
-      >
-        <a (click)="showLoginModal(); $event.preventDefault()">
-          <ng-container
-            *ngIf="!conversation; else loggedOutConversationMessage"
-            i18n="@@MINDS__COMMENTS__LOGIN_TO_COMMENT"
-          >
-            <b>Log in</b> to comment
-          </ng-container>
-
-          <ng-template #loggedOutConversationMessage>
-            <ng-container i18n="@@COMMENT_POSTER__LOGIN_SEND_MESSAGE">
-              <b>Log in</b> to send a message
-            </ng-container>
-          </ng-template>
-        </a>
-      </div>
     </div>
     <!-- --------------------- -->
     <!-- Rich embed preview -->
@@ -217,4 +194,27 @@
     </div>
     <!-- --------------------- -->
   </div>
+</div>
+<!-- --------------------- -->
+<!-- -Login notice ------- -->
+<!-- --------------------- -->
+
+<div
+  class="m-comments--start-conversation-label"
+  *ngIf="!isLoggedIn && level < 1"
+>
+  <a (click)="showLoginModal(); $event.preventDefault()">
+    <ng-container
+      *ngIf="!conversation; else loggedOutConversationMessage"
+      i18n="@@MINDS__COMMENTS__LOGIN_TO_COMMENT"
+    >
+      <b>Log in</b> to comment
+    </ng-container>
+
+    <ng-template #loggedOutConversationMessage>
+      <ng-container i18n="@@COMMENT_POSTER__LOGIN_SEND_MESSAGE">
+        <b>Log in</b> to send a message
+      </ng-container>
+    </ng-template>
+  </a>
 </div>
