--- a/src/app/modules/comments/thread/thread.component.html
+++ b/src/app/modules/comments/thread/thread.component.html
@@ -4,43 +4,53 @@
   (previous)="autoloadPrevious()"
   [emitter]="commentsScrollEmitter"
   [enabled]="scrollable"
+  [ngClass]="{
+    'm-comments__thread--nested': level >= 1,
+    'm-comments__thread--topLevel': level === 0
+  }"
   #scrollArea
 >
-  <div
-    class="mdl-color-text--blue-grey-500 m-comments-load-more"
-    (click)="load(false, 'desc')"
-    [ngClass]="{ 'm-disabled': inProgress }"
-    *ngIf="loadPrevious"
+  <m-comment__poster
+    *ngIf="showReplyPoster && (activityService.allowComment$ | async)"
+    [guid]="guid"
+    [parent]="parent"
+    [entity]="entity"
+    [currentIndex]="comments.length - 1"
+    [conversation]="conversation"
+    [level]="level"
+    (posted)="onPosted($event)"
+    (optimisticPost)="onOptimisticPost($event)"
   >
-    <span *ngIf="descendingInProgress">
-      <i class="material-icons">autorenew</i>
-      <ng-container i18n="@@MINDS__COMMENTS__LOADING_ELLIPSIS"
-        >Loading&hellip;</ng-container
-      >
-    </span>
-    <span *ngIf="!descendingInProgress && !loaded">
-      <i class="material-icons">update</i>
-      <ng-container *ngIf="!error"
-        ><ng-container i18n="@@MINDS__COMMENTS__LOAD_ACTION"
-          >Load</ng-container
-        ></ng-container
-      >
-      <ng-container *ngIf="error"
-        ><ng-container i18n="@@MINDS__COMMENTS__TRY_AGAIN_ACTION"
-          >Try again</ng-container
-        ></ng-container
-      >
-    </span>
-    <span *ngIf="!descendingInProgress && loaded">
-      <i class="material-icons">update</i>
-      <ng-container i18n="@@MINDS__COMMENTS__LOAD_EARLIER_ACTION"
-        >Load earlier</ng-container
-      >
-    </span>
+  </m-comment__poster>
+  <div class="m-comments__viewMore" *ngIf="loadPrevious">
+    <m-button
+      (onAction)="load(false, 'desc')"
+      [saving]="inProgress || descendingInProgress"
+      overlay="true"
+      size="xsmall"
+    >
+      <span *ngIf="!descendingInProgress && !loaded">
+        <ng-container *ngIf="!error"
+          ><ng-container i18n="@@MINDS__COMMENTS__VIEW_MORE_ACTION"
+            >View more</ng-container
+          ></ng-container
+        >
+        <ng-container *ngIf="error"
+          ><ng-container i18n="@@MINDS__COMMENTS__TRY_AGAIN_ACTION"
+            >Try again</ng-container
+          ></ng-container
+        >
+      </span>
+      <span *ngIf="!descendingInProgress && loaded">
+        <ng-container i18n="@@MINDS__COMMENTS__LOAD_EARLIER_ACTION"
+          >Load earlier</ng-container
+        >
+      </span>
+    </m-button>
   </div>
 
-  <p
-    class="m-comments--start-conversation-label"
+  <!-- <div
+    class="m-comments__startConversation"
     *ngIf="
       isLoggedIn &&
       !inProgress &&
@@ -51,8 +61,8 @@
     "
     i18n="@@MINDS__COMMENTS__START_CONVERSATION"
   >
-    Start the conversation!
-  </p>
+    <span>Start the conversation!</span>
+  </div> -->
 
   <p class="m-comments--load-error-label" *ngIf="!inProgress && !!error">
     <i class="material-icons">warning</i>
@@ -77,77 +87,58 @@
       [canEdit]="canEdit"
       [canDelete]="canDelete"
       [showReplies]="comment.show_replies"
+      [compact]="compact"
       (delete)="delete(i)"
       (saved)="edited(i, $event)"
       (onReply)="reply($event.comment)"
     ></m-comment>
   </ng-container>
-
-  <div
-    class="mdl-color-text--blue-grey-500 m-comments-load-more"
-    (click)="load(false, 'asc')"
-    [ngClass]="{ 'm-disabled': ascendingInProgress }"
-    *ngIf="loadNext"
-  >
-    <span *ngIf="ascendingInProgress">
-      <i class="material-icons">autorenew</i>
-      <ng-container i18n="@@MINDS__COMMENTS__LOADING_ELLIPSIS"
-        >Loading&hellip;</ng-container
-      >
-    </span>
-    <span *ngIf="!ascendingInProgress && !loaded">
-      <i class="material-icons">update</i>
-      <ng-container *ngIf="!error"
-        ><ng-container i18n="@@MINDS__COMMENTS__LOAD_ACTION"
-          >Load</ng-container
-        ></ng-container
-      >
-      <ng-container *ngIf="error"
-        ><ng-container i18n="@@MINDS__COMMENTS__TRY_AGAIN_ACTION"
-          >Try again</ng-container
-        ></ng-container
-      >
-    </span>
-    <span *ngIf="!ascendingInProgress && loaded">
-      <i class="material-icons">update</i>
-      <ng-container i18n="@@MINDS__COMMENTS__LOAD_EARLIER_ACTION"
-        >Load later</ng-container
-      >
-    </span>
+  <div class="m-comments__viewMore" *ngIf="loadNext">
+    <m-button
+      (onAction)="load(false, 'asc')"
+      [saving]="ascendingInProgress"
+      overlay="true"
+      size="xsmall"
+    >
+      <span *ngIf="!ascendingInProgress && !loaded">
+        <ng-container *ngIf="!error"
+          ><ng-container i18n="@@MINDS__COMMENTS__VIEW_MORE_ACTION"
+            >View more</ng-container
+          ></ng-container
+        >
+        <ng-container *ngIf="error"
+          ><ng-container i18n="@@MINDS__COMMENTS__TRY_AGAIN_ACTION"
+            >Try again</ng-container
+          ></ng-container
+        >
+      </span>
+      <span *ngIf="!ascendingInProgress && loaded">
+        <ng-container i18n="@@MINDS__COMMENTS__LOAD_LATER_ACTION"
+          >Load later</ng-container
+        >
+      </span>
+    </m-button>
   </div>
-</div>
 
-<span *ngIf="sockets.error$ | async" class="m-commentsThread__connectionLost">
-  <ng-container i18n="@@MINDS__COMMENTS__NO_LIVE_COMMENTS"
-    >Could not load live comments</ng-container
-  >
-  <br />
-  <a
-    *ngIf="!inProgress"
-    (click)="retry()"
-    class="m-commentsThread__connectionLost--retry"
-    i18n="@@MINDS__COMMENTS__SOCKET_RETRY"
-  >
-    Click to retry
-  </a>
-  <span
-    [hidden]="!inProgress"
-    class="m-commentsThread__connectionLost--loading"
-    i18n="@@MINDS__COMMENTS__SOCKET_LOADING"
-  >
-    Loading...
+  <span *ngIf="sockets.error$ | async" class="m-commentsThread__connectionLost">
+    <ng-container i18n="@@MINDS__COMMENTS__NO_LIVE_COMMENTS"
+      >Could not load live comments</ng-container
+    >
+    <br />
+    <a
+      *ngIf="!inProgress"
+      (click)="retry()"
+      class="m-commentsThread__connectionLost--retry"
+      i18n="@@MINDS__COMMENTS__SOCKET_RETRY"
+    >
+      Click to retry
+    </a>
+    <span
+      [hidden]="!inProgress"
+      class="m-commentsThread__connectionLost--loading"
+      i18n="@@MINDS__COMMENTS__SOCKET_LOADING"
+    >
+      Loading...
+    </span>
   </span>
-</span>
-
-<m-comment__poster
-  *ngIf="activityService.allowComment$ | async"
-  [guid]="guid"
-  [parent]="parent"
-  [entity]="entity"
-  [currentIndex]="comments.length - 1"
-  [conversation]="conversation"
-  [level]="level"
-  (posted)="onPosted($event)"
-  (optimisticPost)="onOptimisticPost($event)"
->
-</m-comment__poster>
+</div>
