--- a/src/app/modules/comments/tree/tree.component.html
+++ b/src/app/modules/comments/tree/tree.component.html
@@ -9,13 +9,13 @@
     [limit]="limit"
     [scrollable]="scrollable"
     [conversation]="conversation"
+    [compact]="compact"
   >
   </m-comments__thread>
 </ng-container>
 
 <ng-container *ngIf="showOnlyPoster">
   <m-comment__poster
-    #posterEl
     [guid]="guid"
     [parent]="entity"
     [entity]="entity"
@@ -25,5 +25,5 @@
   >
   </m-comment__poster>
 
-  <div class="" (click)="showOnlyPoster = false">Show comments</div>
+  <div (click)="showOnlyPoster = false">Show comments</div>
 </ng-container>
