--- a/src/app/modules/newsfeed/activity/modal/modal.component.html
+++ b/src/app/modules/newsfeed/activity/modal/modal.component.html
@@ -156,38 +156,13 @@
                     [canDelete]="activityService.canDelete$ | async"
                     [fixedHeight]="false"
                     [showOnlyPoster]="false"
-                    [showOnlyTree]="true"
-                    [fixedHeight]="false"
-                  >
-                  </m-comments__entityOutlet>
-                  <m-comments__entityOutlet
-                    *ngIf="activityService.displayOptions.showComments"
-                    [entity]="activityService.entity$ | async"
-                    [canDelete]="activityService.canDelete$ | async"
-                    [showOnlyPoster]="true"
-                    [fixedHeight]="false"
+                    [compact]="true"
                   >
                   </m-comments__entityOutlet>
                 </ng-container>
               </div>
             </div>
           </div>
-          <!-- COMMENTS POSTER -->
-          <!-- <div
-            class="m-activityModal__comments m-activityModal__comments--poster"
-            *ngIf="entity.guid"
-          >
-            <ng-container *mIfBrowser>
-              <m-comments__entityOutlet
-                *ngIf="activityService.displayOptions.showComments"
-                [entity]="activityService.entity$ | async"
-                [canDelete]="activityService.canDelete$ | async"
-                [showOnlyPoster]="true"
-                [fixedHeight]="false"
-              >
-              </m-comments__entityOutlet>
-            </ng-container>
-          </div> -->
         </div>
       </div>
     </div>
