--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -309,3 +309,8 @@ body.m-theme-in-transition *:after {
     background: transparent; /* Chrome/Safari/Webkit */
   }
 }
+
+.m-legible {
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+}
