--- a/src/app/modules/boost/console/card/card.component.scss
+++ b/src/app/modules/boost/console/card/card.component.scss
@@ -42,6 +42,11 @@ m-boost-console-card {
     align-items: center;
     font-size: 12px;
 
+    .m-boost-card--manager-item__tooltip .m-tooltip--bubble {
+      position: absolute;
+      bottom: 10px;
+    }
+
     &.m-boost-card--manager-item--buttons {
       flex-direction: row;
 
