Stop members from editing in images after post made #4356

--- a/src/app/modules/composer/components/toolbar/toolbar.component.html
+++ b/src/app/modules/composer/components/toolbar/toolbar.component.html
@@ -9,7 +9,9 @@
       (attachment$ | async) ? 'm-composerToolbar__item--active' : ''
     ]"
     [hidden]="!canEditMetadata"
-    [disabled]="!!(attachment$ | async) || (isPosting$ | async)"
+    [disabled]="
+      !!(attachment$ | async) || (isPosting$ | async) || (isEditing$ | async)
+    "
     (onSelect)="onAttachmentSelect($event)"
     accept="image/*,video/*,video/mp4,video/x-m4v"
     data-cy="upload-button"
