--- a/src/app/modules/comments/tree/tree.component.html
+++ b/src/app/modules/comments/tree/tree.component.html
@@ -10,6 +10,7 @@
     [scrollable]="scrollable"
     [conversation]="conversation"
     [compact]="compact"
+    [showReplyPoster]="true"
   >
   </m-comments__thread>
 </ng-container>
