(chore): remove legacy feature flag for navigation 2020

--- a/src/app/modules/newsfeed/activity/toolbar/toolbar.component.html
+++ b/src/app/modules/newsfeed/activity/toolbar/toolbar.component.html
@@ -30,3 +30,5 @@
     <m-icon from="md" iconId="trending_up" [sizeFactor]="20"></m-icon>
   </button>
 </ng-container>
+
+<m-button (onAction)="markAsTh()">TH</m-button>
