--- a/src/app/modules/analytics/v2/components/filters/filters.component.html
+++ b/src/app/modules/analytics/v2/components/filters/filters.component.html
@@ -1,13 +1,11 @@
 <div class="m-analytics__filtersContainer" *ngIf="timespanFilter && filters">
-  <ng-container *mIfFeature="'navigation'"
-    ><m-dropdownSelector
-      *ngIf="timespanFilter.options.length > 0"
-      [filter]="timespanFilter"
-      [showLabel]="true"
-      [dropUp]="true"
-      (selectionMade)="selectionMade($event)"
-    ></m-dropdownSelector
-  ></ng-container>
+  <m-dropdownSelector
+    *ngIf="timespanFilter.options.length > 0"
+    [filter]="timespanFilter"
+    [showLabel]="true"
+    [dropUp]="true"
+    (selectionMade)="selectionMade($event)"
+  ></m-dropdownSelector>
   <ng-container *ngFor="let filter of filters">
     <m-dropdownSelector
       [filter]="filter"
