--- a/src/app/modules/layout/page/page.component.html
+++ b/src/app/modules/layout/page/page.component.html
@@ -1,7 +1,6 @@
 <m-body
   [class.has-markers-sidebar]="hasMarkersSidebar()"
-  [class.has-v2-navbar]="featuresService.has('top-feeds')"
-  [class.has-v3-navbar]="featuresService.has('navigation')"
+  [class.has-v3-navbar]="true"
   [class.is-pro-domain]="isProDomain"
 >
   <div
