(feat): prompt install metamask if not detected - closes #4241

--- a/src/app/modules/layout/page/page.component.html
+++ b/src/app/modules/layout/page/page.component.html
@@ -47,6 +47,7 @@
   description="To earn tokens and access the decentralized web, select an option below"
   descriptionGray="(It's easier than you think)"
   dismissText="No thanks, I'll do it later"
+  promptMetamaskIfNotInstalled="true"
 ></m-web3-modal>
 
 <m-modal-signup
