--- a/src/app/modules/blogs/view/infinite.html
+++ b/src/app/modules/blogs/view/infinite.html
@@ -9,15 +9,7 @@
   ></div>
 </div>
 
-<div class="m-error-splash" *ngIf="error && !inProgress">
-  <img [src]="cdnAssetsUrl + 'assets/logos/logo.svg'" />
-  <h3 class="mdl-color-text--red-300">{{error}}</h3>
-  <span
-    class="mdl-color-text--blue-grey-300"
-    i18n="@@M__COMMON__PLEASE_TRY_AGAIN"
-    >Please try again later</span
-  >
-</div>
+<m-error-splash *ngIf="error && !inProgress"></m-error-splash>
 
 <div class="m-blog-view" *ngFor="let blog of blogs; let i = index">
   <m-blog-view [blog]="blog" [index]="i"></m-blog-view>
