--- a/src/app/modules/groups/profile/profile.html
+++ b/src/app/modules/groups/profile/profile.html
@@ -6,12 +6,7 @@
   ></div>
 </div>
 
-<div class="m-error-splash" *ngIf="error && !group">
-  <img [src]="cdnAssetsUrl + 'assets/logos/logo.svg'" />
-  <h3 class="mdl-color-text--red-300">{{error}}</h3>
-  <span class="mdl-color-text--blue-grey-300">Check the url is correct</span>
-  <router-outlet></router-outlet>
-</div>
+<m-error-splash *ngIf="error && !group"></m-error-splash>
 
 <m-explicit-overlay
   [entity]="group"
