--- a/src/app/modules/newsfeed/single/single.component.html
+++ b/src/app/modules/newsfeed/single/single.component.html
@@ -3,19 +3,7 @@
     [class.m-pageLayout__container]="!showLegacyActivity"
     [class.m-newsfeed__single--legacy]="showLegacyActivity"
   >
-    <div
-      class="m-error-splash"
-      [class.m-pageLayout__pane--main]="!showLegacyActivity"
-      *ngIf="error && !inProgress"
-    >
-      <img [src]="cdnAssetsUrl + 'assets/logos/logo.svg'" />
-      <h3 class="mdl-color-text--red-300">{{ error }}</h3>
-      <span
-        class="mdl-color-text--blue-grey-300"
-        i18n="@@M__COMMON__PLEASE_TRY_AGAIN"
-        >Please try again later</span
-      >
-    </div>
+    <m-error-splash *ngIf="error && !inProgress"></m-error-splash>
 
     <div
       [class.m-pageLayout__pane--main]="!showLegacyActivity"
