comments final pass

--- a/src/app/modules/comments/comment/comment.component.html
+++ b/src/app/modules/comments/comment/comment.component.html
@@ -28,7 +28,7 @@
             </span></a
           >
           <a [routerLink]="['/', comment.ownerObj.username]">
-            <span title="{{ comment.ownerObj.name }}"
+            <span title="@{{ comment.ownerObj.name }}"
               >@{{ comment.ownerObj.username }}</span
             ><m-channel--badges
               class="m-channel--badges-activity"
