--- a/src/app/modules/comments/comments.component.scss
+++ b/src/app/modules/comments/comments.component.scss
@@ -2,6 +2,16 @@
   width: 100%;
 }
 
+.m-commentPoster--nested .m-commentPoster__wrapper {
+  .m-commentPoster__avatar {
+    img {
+      height: 24px;
+      width: 24px;
+      margin: 9px;
+    }
+  }
+}
+
 .m-commentPoster__wrapper {
   position: relative;
   margin: 10px 0;
