--- a/src/app/modules/comments/thread/thread.component.ng.scss
+++ b/src/app/modules/comments/thread/thread.component.ng.scss
@@ -4,13 +4,30 @@
   display: block;
   ::ng-deep {
     .m-comment__repliesToggle + & {
-      margin-top: 35px;
+      margin-top: 20px;
     }
   }
 
   .m-comments__thread--nested {
     @media screen and (max-width: $max-mobile) {
-      margin-left: 53px;
+      margin-left: 43px;
+    }
+
+    ::ng-deep {
+      .m-comment__toolbar {
+        margin-bottom: 4px;
+      }
+      .m-comment .minds-avatar {
+        min-width: 25px !important;
+        min-height: 25px !important;
+        img {
+          width: 24px !important;
+          height: 24px !important;
+        }
+      }
+      .m-comment--compact .minds-avatar {
+        margin-top: -9px;
+      }
     }
   }
 
