remove double conversation starter

--- a/src/app/modules/comments/thread/thread.component.html
+++ b/src/app/modules/comments/thread/thread.component.html
@@ -56,7 +56,7 @@
     </m-button>
   </div>
   <!-- --------------------------------  -->
-  <div
+  <!-- <div
     class="m-comments__startConversation"
     *ngIf="
       isLoggedIn &&
@@ -69,7 +69,7 @@
     i18n="@@MINDS__COMMENTS__START_CONVERSATION"
   >
     <span>Start the conversation!</span>
-  </div>
+  </div> -->
   <!-- --------------------------------  -->
   <p class="m-comments--load-error-label" *ngIf="!inProgress && !!error">
     <i class="material-icons">warning</i>
