--- a/src/app/modules/wallet/components/tokens/tokens.component.html
+++ b/src/app/modules/wallet/components/tokens/tokens.component.html
@@ -1,25 +1,34 @@
 <div class="m-walletDashboardBalance__wrapper">
-  <m-walletTokenOnboarding
-    *ngIf="!tokenOnboardingComplete"
-    [hasAddress]="hasOnchainAddress"
-    [phoneVerified]="phoneVerified"
-    [dashboardView]="dashboardView"
-    (onboardingComplete)="onTokenOnboardingCompleted()"
-  ></m-walletTokenOnboarding>
+  <ng-container *mIfFeature="'!wallet-v3'">
+    <m-walletTokenOnboarding
+      *ngIf="!tokenOnboardingComplete"
+      [hasAddress]="hasOnchainAddress"
+      [phoneVerified]="phoneVerified"
+      [dashboardView]="dashboardView"
+      (onboardingComplete)="onTokenOnboardingCompleted()"
+    ></m-walletTokenOnboarding>
+  </ng-container>
 
-  <m-walletBalance--tokens
-    class="m-shadowboxLayout__body"
-  ></m-walletBalance--tokens>
+  <m-walletBalance--tokens></m-walletBalance--tokens>
 </div>
 
 <div class="m-tabs__container">
+  <li class="m-tabs__tab" *mIfFeature="'wallet-v3'">
+    <a
+      routerLink="earnings"
+      routerLinkActive="selected"
+      i18n="@@WALLET_V2__TOKENS__EARNINGS"
+    >
+      Earnings
+    </a>
+  </li>
   <li class="m-tabs__tab">
     <a
-      routerLink="overview"
+      routerLink="balance"
       routerLinkActive="selected"
-      i18n="@@WALLET_V2__TOKENS__OVERVIEW"
+      i18n="@@WALLET_V2__TOKENS__BALANCE"
     >
-      Overview
+      Balance
     </a>
   </li>
   <li class="m-tabs__tab">
